Adding Navigation bar

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 body {
-    background-color: #363333;
-    /* background-color: #282c34; */
+    /* background-color: #363333; */
+    background-color: #222831;
+    font-family: "JetBrains Mono", Monospace, Sans-Serif;
 
 }
 
