--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -56,3 +56,52 @@ img {
     max-width: 1004px;
     border-radius: 10px;
 }
+
+.joining-sect {
+    display: flex;
+    justify-content: center;
+}
+
+.joining {
+    display: flex;
+    white-space: no-wrap;
+    width: 100%;
+    justify-content: space-between;
+    max-width: 54rem;
+    align-items: center;
+    padding: 0 80px;
+    margin: 0 auto;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+}
+
+@media ( max-width: 764px ) {
+    .joining {
+        flex-direction: column;
+        gap: 16px;
+    }
+}
+
+.join-us {
+    font-size: 1.75rem;
+    margin-bottom: 0;
+    font-weight: bold;
+    align-self: center;
+}
+
+.button {
+    text-decoration: none;
+    color: #EEEEEE;
+    font-size: 1rem;
+    text-align: center;
+    width: 10rem;
+    padding: .75rem;
+    border-radius: 6px;
+    align-self: center;
+    background-color: #393E46;
+    opacity: .8;
+}
+
+.button:hover {
+    opacity: 1;
+}
