--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@ body {
     /* background-color: #363333; */
     background-color: #222831;
     font-family: "JetBrains Mono", Monospace, Sans-Serif;
+    color: #EEEEEE;
 
 }
 
